--- a/package.json
+++ b/package.json
@@ -2,22 +2,18 @@
   "name": "lab-intro-to-express-response",
   "version": "1.0.0",
   "description": "## Getting Started",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "start": "node app.js",
+    "dev": "nodemon ./app.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/jy0ti-s/lab-intro-to-express-response.git"
-  },
-  "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/jy0ti-s/lab-intro-to-express-response/issues"
-  },
-  "homepage": "https://github.com/jy0ti-s/lab-intro-to-express-response#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "jest": "^29.5.0",
+    "nodemon": "^2.0.22",
+    "supertest": "^6.3.3"
   }
 }
